--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:DyRZg6Tne7XJ7lhntVEJ5C2FcoI4ZLSjJUI/wa4N7z3hakb+oPG54ELjKtijA51vk5D6T+38s0tulZv/oLojaXs=,iv:wr2GazwEcwvMyL00UDNNY83SpPQdb17c4hXOSiZlG64=,tag:LVLAiuDEqnNYKi/Apge1lg==,type:comment]
-    #ENC[AES256_GCM,data:Yb7RO1YGx2Ui5QxiTf/VWcIIxAJ1lR/mzyEm6dgS9FzSergjhfKY/0f7LCg=,iv:HD27bGReA+ID/CfjlueHszJKg71okdGIBCVKWce5beU=,tag:KB3mDeMYCP4SLhJ7JoEPQw==,type:comment]
-    VIP: ENC[AES256_GCM,data:dUpc3aPX1M1MdmZD1w==,iv:zsT0zTqbTnjsEGvmgo07Vhh7Pbh24xl9xAlwzzv+s30=,tag:q44k++ixdiG5gdnZn9yHiQ==,type:str]
-    #ENC[AES256_GCM,data:6gkwzySsSP7Tj42EXiVnzl3GxtsKnzQVtDVz,iv:Z9d3by/X+0TyjBxJD8+38D17ELX4Yd0TRclkAy7Cxzk=,tag:oCyCrPQ7xMpepDg53NKmAw==,type:comment]
-    #ENC[AES256_GCM,data:ZYRdVCzvD8o4QczqaMKDqNNQ1+nW7P3yhWWt/Fy2nxwYJCd1kM/3REvyu8cCFp2NAoEIeUTwm2Z4ptcihFlKgnjeZrtTBHA6UGTGgyBDz8iar+Doi7Toc04=,iv:FZsPclqK7vv773CtyJmypNGz9ACGt/f5tcOJtt6q2WI=,tag:k6IosoDNpBRSZugSR/LrDw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:D8K2rl5YDdm6BFc6auI=,iv:8Za97ZfiAodT+/7M2a5VkztJQ8TplIF7w+H0feDzu3w=,tag:7lxqi/eu2sHyjSJ/h0t44w==,type:str]
-    #ENC[AES256_GCM,data:DBaN7TNwAj7onzoitlumDB3+zmkX7QDT9VonadObEJF7LQ==,iv:7i4kdIK2CGtgVTIzyQDlub81D5kLz1pwnRgCwEy/YJc=,tag:tTPYK6uLbcDiBgq63dkZyg==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:4LTD9XBuR8zqE3MteA==,iv:FtgNGnoswHk8drVOiDJh7vBua21Sj8uvzS/t2ABQ1zs=,tag:ufXQuTO4deTMlpWNhHoKgA==,type:str]
-    #ENC[AES256_GCM,data:Pkbc6KyvKEHkbPbFQhre0eOLPIjzfMd5WWPGPLori6SECnnnNHlzJAAVS3aIvsg=,iv:KOr1RFfH6MLhGe5lvVMu5XnFUvpROI9P841MubJSUjo=,tag:ahB6WWU5E19ntryh3xX7Ew==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:u0HEcfxYjEZlYvDCIq7ebkOhXvfRoe8MNafyFStHyw==,iv:EPd4Qomp4NkeIKdaMVxrE2JjcWB0XDy7y29A9RJsb9U=,tag:iwD26ElIh/7NjIY1pODOAw==,type:str]
-    #ENC[AES256_GCM,data:89YD3rNaewnnA0419qKI3N/zCDTQETNN9iZZYw3bdHvG1KYwsDUSkd57Z1Hnb5H5fz4xdUHTST6vkKi0thUENy+KFVv1io+/behFaOqTW7La3w==,iv:i57Y9lMuji85mks3f/sG1d5qMjT9PA52+Dg/JIbS6u4=,tag:9kJs1/54btPQ3xQ35pclcQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:icz/6m+/FLNumKlchDPF,iv:ra5bUTvPuXcfqMmUNyf5qNsM7ruNlttk+86zFt5wKNE=,tag:Fpuc5NjH+mHJ4hc/zTksrw==,type:str]
-    #ENC[AES256_GCM,data:AFxfzN9bwO7dU7btb9h+htI3S+fElPvifEXOj5EIUN1W,iv:gCCBN55zxTt///9/m7bo8gvrQSESlg4eeR5FyNnFTSk=,tag:hxpqSAfR7mTS8sVHv9/uJg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:BA+5CJpenAj4SPhR3n0j,iv:NJ6SeVJId4PLvfo3AK2mPqBN+gOQBztOGFlQVY/ddUw=,tag:Fd9D5/2KDB2bwf28dOkmBg==,type:str]
-    #ENC[AES256_GCM,data:tQjKNaX1TZCDg67gF8EZork7iLT41dcFIaPrrJ1upNYh5p8pPM8N6As9/20ZyYtMH5sBlt+n7H3fXI7p6Y6Nzd/Ud+ypz/QpuHR395NYCJo=,iv:QOUWOo38QIQMwLKjQwY6yoMST1VBuH78rf36nnZnH18=,tag:igLfbDi598A3g+OdgLVroQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:o/1IuUda2r/GYk/Dz6fL,iv:xnmXTxUYjR+B/QKs+l/0rPNOsVssEzAMVDmPokZaCDQ=,tag:UB+8k/WRfw+i6pSqUZfBeg==,type:str]
-    #ENC[AES256_GCM,data:X5fl+CfQq4FYO3Tx7pqoK4AELTIgaiPWNzJ7VbBgxe+nw16exO9MrFvIPYKkbffRE7xjkvS6k7s8TPh6Y5HpRYrmnHtCRxWELfPIfF7ZkO6l+Z3awf5o,iv:WQS9PA/BqaQPlJrRYT3qyjfByIdX8iffVktAqIfoYWI=,tag:bP9N2YK3E2aNcQegAoByNg==,type:comment]
-    #ENC[AES256_GCM,data:VsTcuw7OCQ4SmykEVY5zMDpOFNGjJFfUi0a33KpF5YFaKfm3I8vXR0AUrabFREjvRGgk9xqqpZ7iFzVQPngZGMeBozx50QncbEcr0rqPHms/k7e0PWecK1mACZr4rfZqOpsaAPDQ5aNmmQIt8UTIMvkkwgR8mdVYCiUIGw==,iv:KGFa7KglXAMoAeKsMaAtnl63hz74Go8w0F/NulK2h0A=,tag:GBH6U/yhD8qQPg8nu3q5cA==,type:comment]
-    #ENC[AES256_GCM,data:sKHgBHVPEYCxQwFv8kOCPhh7k8ZKYrVPZn9BveUFA4uCk1oCRFy9L9fDxkbFU0LUhckUyRpT6ZZSGfs68xbWcq8c2AMqtDpMyuAubdIob30=,iv:Qd4P/1TNBCK/a62CU6FdrSUPR13VI5mclU2Sy6e9iJQ=,tag:8qLL4HWaiStwFIHfsFYIzQ==,type:comment]
-    #ENC[AES256_GCM,data:dEiETmJ+mSasGBCznupaDNyx1QmZAeGt0gcYazb3TLPjmxsQLt0sJ1vL3/5/4O3cXgMcLkEL,iv:tORGq6ZlPbBNsgzHzDysFRpDPYtLGy805Iqr2d5JBXE=,tag:Ob9jYUlcF7GbXMezzbWPYQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:P6svR8WeBJumHnqV,iv:DmWSzRR1yRCB7bghxa+d7QaAJHHPmNvngHN/8v534Zc=,tag:/fsrfgxAkF94lRgaVfMEjA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9RLPKJjqO+feqODy1G39b4A=,iv:NsNUPAJCq/6SMrtNjcsrdvQtJZ83uenut+9zfwdSdHU=,tag:G446bdvRgGfQRgWHJDHT7g==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:bHXOIe1zIwCv1kpFlMSsZ/bgsP6zwc5E3rnpnbXEGD0=,iv:PSkJmMkj/6Gr/c0QYjJNFTXy7bp+3TJpl7oKTOuH/MQ=,tag:AggX/gTNEIz/9achxr1aYg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:MnoYap7plaXDde1A6EbtsYA6IjVWdVWQa4VVDTgDJaKSAg6OI0IDjA==,iv:Ri9H7+LbBurZ/nOA2vkw9sQYXuSsGfN5L5+BxWVGKuI=,tag:Qn0GFge2Cs2Qbg0KZqB9yA==,type:str]
-    #ENC[AES256_GCM,data:0mYI5jlkAbqHs+O3aFefDiKErrOQyc0VGABWXMUXKrYqZzcRJlYGqxFgWNt52egIRXFuTsBSdyR2T66nIf/RzQ==,iv:fAzwr8fJIst8lr3FkudoBUeBFJmdJeeCNTPmAzPswmQ=,tag:S4mCjZZIEvc+3VbBE07k3Q==,type:comment]
-    #ENC[AES256_GCM,data:LSNIJV/4V3DCCr0+tlRJ4PnKy7Peil61xK3xoX0jkhcq+EZyQDCmbkoI3mJWTs75hlMQ+PljZHM=,iv:lXHmzdS12epLITWraA7/9YML6j2FQsOPk0yKsISjyek=,tag:xVeVMe/oq1TLiVWkdONDvg==,type:comment]
-    #ENC[AES256_GCM,data:xkI+vYb4+iAEoJ5y/WKkY8ixK52rQGibBg==,iv:cjQPNBeGs55g9sthcYcgEwDADantofnJHFC7icct2n4=,tag:wYk/qeeOcfGvuAPj4M/FLg==,type:comment]
-    #ENC[AES256_GCM,data:nF0U/hgEA0t+z+XsSsbTcOEukTdWRyASvOM995rxpK3ZzMp6+V1bqFSeWWGmLKPxX+l4k81xvRcxT57ILpX9A7UnBqAgXzjJxDHXY08=,iv:CIQ+lLEn1Z/1vouXNhWI7PDZ1zMWVK2Dh1PA3WlJ1bc=,tag:ucCGkcw7NSL/W9RNf6AR+w==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:g88WbKdWIK0a9Ms2nUBSfBnk+neeqcGGG7O98pfkuPSN4KR0v9qonedxKRmx5jBl,iv:YhtSAczBaCMAFJ2YnfFmoy+Mstcd0OOaBhwTkHot420=,tag:XQs/w9Y0n6FB21iFxL6zSQ==,type:str]
-    #ENC[AES256_GCM,data:FlF6Lc9G0xvFQ7gooRpk/brXONmMtM1ctWeDDI6Z5fohctLPxgpp4dCJ5OeR+C/yzWiIWLx5Yfrti6VdGxsTJwr8D7VJ7HI=,iv:n/twh4peMVAbUl8UOWrGRckW48fq/xdpFw1gGowIEBc=,tag:0fr+SLFidP9X3NhHm7jQ4w==,type:comment]
-    #ENC[AES256_GCM,data:Z/ebmHaI/T7wUWParbwidsSSm3Rnl8k8T8/0v8/8aR2/5LPyQyLxxfLAFedYgFcfCWHqkho7,iv:25mLWIuSWmwTYtT+gFiQPvexJxJv0qfxgeDAobT94kU=,tag:DAIAJsoqOFCC2IujVJzPQQ==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:Ec8AyTF6Dg==,iv:pq9cYc1Qfvhi3LWccMw6sLVH8eQUoIk0RzMUjQZZFPI=,tag:i7A8Nz9ZnIjXd4GUI4teBQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xaOGUPjraIjJVRD1+FrawZGu058=,iv:puPNDe3GWs9Xb4dSxBEY/pYkqUwg57Hf2srqJjlG62A=,tag:l34dPr+DFf80vNJnaGLSjA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:itNamw7SVKtyaYc=,iv:zmY9Fx0DG+VD0wx7ihprXbie0ju6TCkRn5mlxNVRy48=,tag:9xMHw9BsOIk5X7MwYvBBsQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:J70Ixm/P280/MDLVaqU4,iv:EE/IEkOxoCcxOPrZbCNo6I4LfMmGCU0rWKmluPqe00Q=,tag:G5YwkcSDSEiNi2xqolzzEA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:jhXzBhn8GQpgswJd9ZwioQT/xPNXk7Evew==,iv:kQpXszVz2oNAK4JJaJjcgFbZEr0HRSqU4eCBrCfRSvA=,tag:YnnWojcwf2K2wj42kJuumw==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:reCMCqZCiXBAc0qbf9J2RCEL6UeAvsrYyZQhEuS8hw==,iv:LGPBL3aCKILdwrRYpw31X5JLdmmnmo5FDgMGgzQgKZc=,tag:PcWBr7kDveCg+WWTsWLu0A==,type:str]
-    #ENC[AES256_GCM,data:qcogh1vv5SqWS1SQfG6U3gsW7AaWP0wiNH1Tny+rsVE9nJ4t7HY=,iv:UrbiRk+CzVOUuSqEnDUgdFLZaTHOk/qtGVbdol6WpDI=,tag:qJPmG+nqlIl3SxAl/bjdGw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:koYyJ6K8iccsSRSXTsxvk/MtiO0=,iv:fVksJuHMspYf8RFHq4ozaZCsvVEqO9VNmkYRT/zt7+o=,tag:0UJA3rKtgfKb7SYZ8Yfkcw==,type:str]
-    #ENC[AES256_GCM,data:mAmKjlyUBwGdmv0yqD0=,iv:ZQWTeSRoLiSzSjxSJVOR2ARXcy+h3T5aCou6OISs7cE=,tag:qWpvOWi0bkksRWK0jHrKOg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:PoT6b6TOXlY8E3P6vA==,iv:ZxMrf9mUNegPtYhTqBZw9pCOSOc7RCtqu0w63ULp918=,tag:oacZbh7WmsVus7q+S0QVmA==,type:str]
-    SVCNET: ENC[AES256_GCM,data:LNTtBPH2vNp2QOHgfg==,iv:zZgXMAnxyM9QBGGoRasmoXflECLoNxDN1Frriv+1GHs=,tag:ZPwlv4UXWMomb/Y1UFXrYQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:94h4iQ==,iv:5sA9jMLwtGPNTQ63469n09+GpQ8DIjjdgbhN0V2qVnI=,tag:ANu2k16lJnp2wuEC4ydZuw==,type:str]
+    #ENC[AES256_GCM,data:FIRyQjAdQ4IBkdaS53aBdp6k5vBFKCXBXdUkwGaVz+VVYtp579MMbrsI0ub3RaS7E+Xnc1ugbBWx3yQbLs66dlA=,iv:q3ZDOnbHBxM+7c3ro+iuiKqwXQgea78cc82iBFPPyck=,tag:cjGxONo3Ipp482MKmnS1Zg==,type:comment]
+    #ENC[AES256_GCM,data:+C0ZhA0vyGsOC1CMPaBeSHqpBC9S53gt0pzme9Dk2/zSAdS7pjmjC2ZKiP8=,iv:vX+F0Gq40bzQY7fqfQwK/R1abpWRo5EP/PkSzgZSo3A=,tag:5fG8w2A1RkJNZ1TiykUOGA==,type:comment]
+    VIP: ENC[AES256_GCM,data:qVSb9Qnvxo8vOFtt2g==,iv:BXXe9w+5W8QP9ZkoaeSUMC/0ZC9Zvy7JAud+iobDBug=,tag:vYPvXYRG6RM4q1fVuq0SmQ==,type:str]
+    #ENC[AES256_GCM,data:8k1yLr5KdhYH60d+FrKgHNoeF/FjSBGf/K8I,iv:0nw3IGNwZsiCht9EGSxcaF0jskP5u5AK4t6y16F2oRg=,tag:fx1ktiJmlnrtgURuD1nKLA==,type:comment]
+    #ENC[AES256_GCM,data:2xMJ8lytrbr0UqQF1dajKVSAIapY1Y1Wne43HsoRwavyD4OsHrYJLDSZtzIf9Wlp/AoBihsMlc7j7yub40mwTpfGKKyVdHMTZRSnWFj1kq5VvZ1zyIHkfSM=,iv:kaNBYJWNF1UFvxML3AiKp6dCRNFREjOQ3JTO1sMYPAk=,tag:zadb9F8aZgUS6PGExaCHzA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:2iU+BHDZJOpIk6eg+X0=,iv:XqFMKacKq/BpfyT83hML1YIXWpfhrdNG5lpqyN1QlZY=,tag:MxeOn2NanJ0mogd4LN8A6Q==,type:str]
+    #ENC[AES256_GCM,data:w6fVEeqH6U6QYb+cpBFaIvLe2aJyJeAouhGqepQq/4CVtg==,iv:PhTi60iiaN7F6zorOjqC86gCEvz7OetdRhTWN5udRdo=,tag:+uh7bWD85cPM5k7H93Sh9A==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:D7eK1t99qJFMnclI0g==,iv:eC2aawGh7ymKHbU1a8vtd+wDdCUL8gN7LWGLYoV7HxU=,tag:GON/rptCpUZMpFCVWF9rTw==,type:str]
+    #ENC[AES256_GCM,data:lTcgRWnp2+cqXJwEGwzNtd5V8DEj1JyCIDuT8yHBUPwUFwNGp4kzI4KV3/dkEa4=,iv:OgZK5VGbFsyhVKkw2P2ttuIcFuswlbjiumD5sLJifDQ=,tag:OAHR364GKf2lQZNGYbQxwA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:8oMuBfLIc/WVyAWNE25TExdnqzEUvDjgaX3TTjePJA==,iv:unsA4HX0j/I4Oi2Pbm19SdQn++47x6RPeMPODFvkgTY=,tag:5DiIO4LtBaaeVP7vVBaYeg==,type:str]
+    #ENC[AES256_GCM,data:Dez+ZOCbNFgpYPnIkKhhCLWeFYdNnyKE2b1m8lTfHr4BW9AQa401n5QKmAlkcHZAxllI47RR7dfh7yLrqUlo6cJxTudy8rgP3EcGDknATaTldg==,iv:FxCek0mL7X4cnQ41iUDgi+leYN9l4Hd4E97HRDi39Qw=,tag:Rk3s1EjRgdhQfjxISoz6jA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:GWKVpOep1CtcxVViu9m1,iv:8yTBmGhHE/1LFQXyV/DICQ2Cah4j42VxKtV5QrV/YTM=,tag:aXtVNx4NI4eiJAFYxbYVlA==,type:str]
+    #ENC[AES256_GCM,data:0rfsDkz+hkE6m7duePaDRgKophfN4MdPgK5n8IVzn8I0,iv:2ERrjZVEmL7trH5vuDAjndh1p3UMIfGNmkcCt472ikc=,tag:kPRkdtF0rw+lCUOr8khFCA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:NL5OYkO3xftolT6aH13V,iv:5AxQON8pNnMQdRoKYY66Z9LLdaf6lg4nwqQX9N7vR2I=,tag:8XiH1d5k1QIOJyUZZv1U7g==,type:str]
+    #ENC[AES256_GCM,data:kKlt0PCcVb3N5B4+sqPCgC/UiTq0h4/xVC1RsBs1jrnuWWehQ0zWZQPmSDIHmxB5Ovcf7lhA/XbG4jjks+8guK3C2PzTppvdm2MxpoUltvk=,iv:Y0ztjCgqFQN9Kwy3wLCuXdWK9PjK14H2wj0BoqdXMAo=,tag:y9qQUEhGNCrzLkREdG+/oA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:IWc+s9IweWFIsbJs0/rQ,iv:1qULQOx57svxOTkkyPATDDQVK0oFlQPPR+JgTKWwMuk=,tag:udsHa+XVrWY+3HsCvx+bYQ==,type:str]
+    #ENC[AES256_GCM,data:pj6Tly0TlKaS2HWBOr0P6NkRc1D9bj9/vode2H6fHLn6rDUgya7nT/gOiL6+HXPpo/ilxDH7XdZ+URSSmoHzEjyKvWTeAvCEEBI5Oa6LEZZZ+1HgQOvM,iv:OkdLdqsaCpnsqYP5b//W5Av1c83b/2mXFfqvAM4Gyok=,tag:uKTpjKzzrN8FNIoDQfSu8g==,type:comment]
+    #ENC[AES256_GCM,data:X5GcoYy9Dm01gtuH0mN21SpSkbVNOY6o/u7cKntiOAO+Xmt3IQxw2YHAm2xx5UqiNysPYLtACBH7bDvuO4dT9bFv+UsjqRnjGT5otp80GtrYM5xadUzDio97qFEQcgpfcF8LC5GbM7lOUHgt+dR7BG4Gr2Z2avwT+3Wr6w==,iv:HCqPVPVelIfOotroHVhzXR9sLy3Ow7cWWHGlNoa7rcY=,tag:/8mneFzP2zsZlA1IcB9/IA==,type:comment]
+    #ENC[AES256_GCM,data:PlHmVLwt/0sehSiGwSWqLjAFxhqYHzk9q90tRMRvk+2cm1bXt2zpT2wDo+C/nZ32CTs7kaLmSnyVeYt3qIpic40fQ6ggbFJm4SLRNr98QMc=,iv:dOz+j4N2pvlKC5faekbCzdMzU8PY1bG2COtHKyJtOXQ=,tag:/MOocKb7koMZb1YWLKMytg==,type:comment]
+    #ENC[AES256_GCM,data:d7cBLkC5QkrtG8Vvj2+DQ1P235Jx6vrB0b84LUPmdk3FxXuEpzlv4Pq5b3CZlcNOGplecRqs,iv:uMfOEnZ/z08CBP0jE1T0uNCth4FPiyt21v7Vt5rLelU=,tag:FQOCgrEg8GZfWaV9PhvviQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:OsEbT4aKuGb5FoKL,iv:v0rY6TjrOHxHilhfqiduydXfiRdJcEBtnDrdn3WfM7s=,tag:IUDtVlDVMjfHlbhA8d1whA==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:q4R6neQIA6DeZ6j+i6yYpzk=,iv://8pp/oRBf29307Usfr4l/J4BRNOEcmwmQBIh+eiPAI=,tag:cQgqGkcCfkmvnY35lmUOLA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:Ph73ABpnQAvFDbUoiUdpGjx2WnfGh+svOGlTa7jigns=,iv:CV2gcqSgftqVNVPEBekvhCoqPy2k5XSsRr/R1xgtrRo=,tag:UgCbrzElcjX6PXfycGPNSw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:FMk9WOhhd6XgOzz6b8rpZX0PHsdNFzAd7SYmtkpINI/x965Q/QfLyw==,iv:V0e3f4H5RzXbRtg/zU53Iwtw6/epxi7nNc2ixfuzyWU=,tag:22tPkaLAtEceDv+PzHUsAQ==,type:str]
+    #ENC[AES256_GCM,data:mSz8OcdtalC3ll9Fp+AyFclmjzQTe/UjzT8sjPBBU9zad+yeOmoO/ChDLDgjj41Qocy/Jr91MNVbs0Bw7g6c2Q==,iv:5Gs8YK/7Q0c3CmHNNpM82WmZWo/SspHA6ZsGhVr8byU=,tag:7WUdls3GDSawklrk0ZjNTQ==,type:comment]
+    #ENC[AES256_GCM,data:6IOUg64BAHdW8NbfelZbONXqLRaXq7GhufE/8c6WEh0oTCnnuIt4K3Qa5heohCb3qrtqgBn/qdE=,iv:MevMdryjSEsBWmfkhxEIVN4e1//L7pECOJAq5BNBVOQ=,tag:YaGUybHLhSfr3gkj+WxRPQ==,type:comment]
+    #ENC[AES256_GCM,data:3apJk2ncfqEMcBwRO3IdifR6nwTmkjWuiQ==,iv:VvImZIt1cbrtbStkqBPBfgCN+5a7mVyqH2HC8TuaVKo=,tag:KZPNyOHt5EtzLHnP1s+3nw==,type:comment]
+    #ENC[AES256_GCM,data:7hFk18Aoub3wfJkRFAfVVh7/vxVZZP6Y2wuqqeTcGjygweLIrrodYNBuylNWIPVs88Fw3R2Mn/RL0cozdeg4jZLodF7ysJfJ+HDwxjY=,iv:R94sfBuRIK3uqiYn3byKLzh0iby8jb2sww5TehNWhKo=,tag:0XVBXxMlFFdDqGTP5rnX7A==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:fSbO1brmBHXhidjwCqLAvXls2O03Xvs7/btF82nN34eroNtm/AiHwzlW4Uoa/0vU,iv:zAPzzXeRTTJG1xWUzCUAQDsyJ3UIHd3EGN100zECDAA=,tag:DlhQwmDbCHzh3TuT4ULBsg==,type:str]
+    #ENC[AES256_GCM,data:LJ1RnGSqOSUn+rjJjZnaFBuaeh9DrSk72Jl5zqxtMLTzbl/t/RWzPNMqPdoVbTvM50EGcwlZGHMovLmWtQJ3VICvavNZnHc=,iv:iAhGwAOhyBrPJf1XNyQFqACFZ0II5T3TVWY7SBph66k=,tag:rvMsYFyYVdAzEqXVXv/wpA==,type:comment]
+    #ENC[AES256_GCM,data:28G6C1SnU9H7ROuTn9MV65lRQ4DZxtC2rWeAEpEmNS3Wf+lWPDS3sPs51+fBoiNAeuzEWp/V,iv:BiDh/cRBnrtbRfGtcrvfxb3tZe8N8lVAVIYWJHzQk2k=,tag:AD1cVwtCAS45rQ7EYiFUcw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:/Mjiqp32fQ==,iv:xcJr6gAidcbZGIYgmVP0H6/OmnjHfgZgjjJgEjHdT44=,tag:nkHLlr/Oerl7wosLc8Hw5g==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:30Ly9lbgGwEHyPDIS5mNnwbqxNo=,iv:6oTXCvLCxS4tFHeqru5fTbB+k3a/ZfUp9vw8s1lMitg=,tag:jD13C+6X6inU5d48GZCptA==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:RP9RBfxYAf3jYWA=,iv:7AhdhcCWm9DKoqT0VYnI70zOV66sOuH42J17pjVUUiw=,tag:QjNfqhw5pvExbCVWKzXPww==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:aPzYHKqJp8PufJ/BRLLg,iv:YCk01KPya1+Sd2RTyTwJnhZhlnheDO0ieNcz1ZR4yQg=,tag:ugHwl2Jt0waOOgfhv7iqdQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:OjKBv8UqfrhVFbreInWT89aum2GLR9pZuA==,iv:DkqHtB7QebA2jBYch/kpVa/mgV9i3eEFie7gNoWAqyk=,tag:v3idpiOHT30Cf0abZvQpwQ==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:ECijPlRGRyLKvQz/hTLv+bxBo3PndTUKVmcHNN/R1w==,iv:oLkLMO4rASHi/qkRlrxrSLsIMubMBrtPmbIwnCtJpyU=,tag:GKOI3OF9OUj/6875+9lyLg==,type:str]
+    #ENC[AES256_GCM,data:hNJVioNL5vOaNjX/OyvRC0wjf4LErfF94OfU9lJ4PaAHLE0Qxcc=,iv:zRyEjUq0Tui8fnU2HYXe8MfgGtoGFsEDAW84oX+xdNA=,tag:zkQDt9XSZCSehDh1QhAkEg==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:nQH8lL7RYCwlqRxN3v0dbDzJ/hI=,iv:aG50fv2z2Tg2JgE9JBexGaEtWCxwe1NIyGfjoy8mdkA=,tag:73czCZ/gghzA2ft4yIqaUQ==,type:str]
+    #ENC[AES256_GCM,data:2SLr3GvDi4X/wqjjVqo=,iv:i3BUp7M7ZvYNlGK7uiYmqUdWya0pQxZwhT6YIMMZjXk=,tag:O5tcSTiOd1KnE2V+t56S+g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:iihFTzrKjtXfLx1PVw==,iv:TmA4nDpC7PCMkHkx2aap8XhrbDt7mvtG67W/ISVQNaY=,tag:Y3NqVf9R32lcpa9kF7F0Kg==,type:str]
+    SVCNET: ENC[AES256_GCM,data:Z+9sAwmArQTVz2LXOg==,iv:2OT4QmXApLoXwWFLQIdjwXC+KbjYFtkSfMPH+tBx/So=,tag:PFuOOb1CnU/XiluDJFWF9A==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:Egx/cg==,iv:GR2JQfFH4E9JSDGK5ZwJirkO/xwEB55bCgY7v2ms3Ds=,tag:14V2OQkbHtaMpOmxckXypA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxTzVzNnAzK2tOc3dnSnIy
-            YXBmOE5ZRkdBdGNhalh0SGJSdENsOWN1ODM4Ckl3OERuTWhJaURFQjNjbGtVYXFr
-            bXZIeXN1K2xaRGEyS3Z3YmhrcFV2L3MKLS0tIFQ3eXRpaTBDaE10ODRXeEVwM044
-            TEVrUGp6aTFubWFJamRlOU8rTTE0ekkKvaWlxag+9QygcV3iR6U7tHQFNGhcQm/d
-            M0yN3gtUIGZbyJv+HPCAEvRH4vg+9hhFfifSvo7ZeinT9GOdquwHuQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5akFJVjM3UnhFNUxMdzJB
+            OTF5OFp4Si9PSGJheFZqVzFHVW1nM2FIVzF3CnJRTzJpWFVtK3NKeFdRWG01VHcv
+            TytnV1c0NytxMWcwOEZrU0FIZmQxZWcKLS0tICtqYnkyZ0ZEamtHMGpzRlBmM0Vx
+            c1p4L0wxUmh2bzVPOTlGdWFFVFZ3Z2sKU8Nablc9xOu5/sjlBctdh9VPZmUZSmZd
+            xJG9I86vD/vYR0CxO6VwR7vNZl97kGih3jvBbZlOD65nBHdrAts/yg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T20:26:16Z"
-    mac: ENC[AES256_GCM,data:FGFOa9z/NicXXkY+E1e31jdj5vyb4kmwytiKoHjzhwQIPEQuIRUjPfMXl5JMRynxEgMusDv8JfI3hQ6HKD9Lumv4P52kbFB0op3Ee1YcE92mmNgEyNFDZWuexelI3rSkdpJqqYb9w62PAn7Mv37NUf5bizLYKxhMYD5TCMtnMZE=,iv:iNQmftgcVrMV+VhR2JgxUHKdMdvT1iROgc5Mi0Xvyh0=,tag:lhjN0ic/4ZUnipHOAhat1g==,type:str]
+    lastmodified: "2025-01-20T07:23:38Z"
+    mac: ENC[AES256_GCM,data:mgoZMbwoxQhHpsVmzubCYyhbqSe7BrEje6IEv5qdAenJW/c3ha/NKC0hDyqhXvMaS9RURm7WY4MSKzuW8B3+5ah2AC6dr+YvuP7l7LgJV5PwY9lgyLE74YuEmZFtpUu13kjWM3Da3kLB2KVe9PpSUXGP07L3qUJSVHRMJZYAniM=,iv:t87rxgQ9nKeevZRcR3zehP4P49GOAgsxb5Pnb8SCtIo=,tag:pjsUm31p/kDzr8mmeLsd5g==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
