--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 resources:
   - kubernetes-dashboard/ks.yaml
   - cloudflareddns/ks.yaml
-  - plex-pass/ks.yaml
+  - plex-pass/ks.yaml  - transmission-vpn
